# Portfolio

./: .gitignore  README.md  action.yml  pyproject.toml  requirements.txt  voz.py
Assistente/: main.py  nomes.py  sensor.py  voz.py
Assistente/rosto/: rosto.py
Estudos/: Programação.md
Trabalho/: voz.py
Trabalho/Assistente/: main.py  verificamain.py  voz.py
Trabalho/Assistente/rosto/: rosto.py
Trabalho/Assistente/testes/: nomes.py
