[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Projeto para empresa"
authors = ["Felipe Carvalho <darkdeusloki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
pyttsx3 = "^2.90"
coverage = "^6.4.1"
SpeechRecognition = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
